<resources>
    <string name="app_name">LEV</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Register!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="empty_list">List is empty</string>
    <string name="change_reminder">Reminder (Incomplete)</string>
    <string name="change_language">Language</string>
    <string name="select_language">Select language:</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="dictionary">Dictionary</string>
    <string name="learn_english_vocabulary">Learn English Vocabulary</string>
    <string name="search">search</string>
    <string name="test">Test</string>
    <string name="flashcards">Flashcards</string>
    <string name="listen">Listen</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="story">Story</string>
    <string name="topic">Topic</string>
    <string name="account">Account</string>
    <string name="favorite">Favorite</string>
    <string name="recent">Recent</string>
    <string name="speech_prompt">Pronounce this word</string>
    <string name="speech_not_supported">Sorry! Your device doesn\\\'t support speech input</string>
    <string name="speech_right">Correct pronunciation</string>
    <string name="speech_wrong">Wrong pronunciation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flip">See meaning</string>
    <string name="select_time">Select time:</string>
    <string name="definition">Definition:</string>
    <string name="synonyms">Synonyms:</string>
    <string name="input_name">Input name:</string>
    <string name="word">Word:</string>
    <string name="pronunciation">Pronunciation:</string>
    <string name="mean">Mean:</string>
    <string name="test_ev">Select the Vietnamese meaning of the word</string>
    <string name="test_ve">Select the English meaning of the word</string>
    <string name="add_a_topic">Add a topic</string>
    <string name="add_a_word">Add a word</string>
    <string name="practice">Practice</string>
    <string name="remove_topic">Remove topic</string>
    <string name="sure_remove_topic">Are you sure remove this topic?</string>
    <string name="yes">Yes</string>
    <string name="removed">This topic removed, please refresh the fragment!</string>
    <string name="no">No</string>
    <string name="memorized">Memorized</string>
</resources>
