<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
      >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textSelectRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/select_language"
                android:textColor="#000"
                android:textSize="16sp" />



            <RadioGroup
                android:id="@+id/radioGroupLang"
                android:layout_below="@+id/textSelectRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/english" />

                <RadioButton
                    android:id="@+id/radioVi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/vietnamese" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroupLang"
                android:layout_alignEnd="@+id/radioGroupLang"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnOKLang"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btnCancelLang"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorRed" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>