<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/lblTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/select_time"
                android:textColor="#000"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/txtTime"
                android:layout_below="@+id/lblTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </EditText>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTime"
                android:layout_alignEnd="@+id/txtTime"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnOKReminder"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="notiButtonClicked"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btnCancelLang"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorRed" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>