<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:theme="@android:style/Theme.Translucent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:srcCompat="@color/colorPrimary" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="15dp"
            android:text="@string/dictionary"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:background="@android:color/white"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnRecent"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_watch_later_black_24dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="20dp"
                android:text="@string/recent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#111"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btnMemorized"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_check_circle_black_24dp"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="20dp"
                android:text="@string/memorized"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#111"
                android:textSize="16sp" />



        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>